# src/model/order.model.ts
@@ -5,8 +5,9 @@ const IOrderSchema = new Schema(
     {
         PizzaId: { type: Schema.Types.ObjectId, ref: "IPizzaSchema" },
         CustomerId: { type: Schema.Types.ObjectId, ref: "ICustomerSchema" },
-        PizzaQuantity: { type: Number},
-        TotalBill: { type: Number}
+        PizzaQuantity: { type: Number },
+        TotalBillDollar: { type: Number },
+        TotalBillEuro: { type: Number }
     },
     { timestamps: true }
 )
