# src/types/response/order.response.ts
@@ -3,7 +3,8 @@ export interface OrderPizzaRes {
     PizzaId: string | any
     CustomerId: string | any
     PizzaQuantity: number
-    TotalBill: number
+    TotalBillDollar: number
+    TotalBillEuro: number
     createdAt?: string
     updatedAt?: string
 }
